<resources>
    <string name="app_name">RickAndMortyApi</string>
    <string name="text_validating_information">Validando la información...</string>
    <string name="text_without_internet">Sin internet</string>
    <string name="text_retry">Reintentar</string>

    <string name="item_name_tools_text">Terry Smith</string>
    <string name="item_status_tools_text">Muerte</string>
    <string name="item_species_tools_text">Humanoide</string>
    <string name="item_gender_tools_text">Género: </string>
    <string name="item_male_tools_text">Masculino</string>
    <string name="item_last_location_tools_text">Última ubicación conocida:</string>
    <string name="item_location_tools_text">tierra</string>
    <string name="item_origin_tools_text">Alien Spa</string>
    <string name="item_first_seen_tools_text">Visto por primera vez en:</string>
    <string name="item_type_tools_text"> tipo: </string>
    <string name="item_rick_type_tools_text">Rick es lado tóxico </string>
    <string name="item_number_episode_tools_text">Número de episodios donde aparece: </string>
    <string name="item_number_tools_text"> 3 </string>
    <string name="show_character">Personaje</string>
    <string name="show_location">Ubicación</string>
    <string name="show_episode">Episodio</string>

</resources>